--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fruits App</title>
+    <title>Blogs App</title>
   </head>
   <body>
-    <h1>Welcome to the Fruits app!</h1>
-    <p>An app for collecting your favorite fruits.</p>
+    <h1>Welcome to the Blogs app!</h1>
+    <p>An app for collecting your favorite posts.</p>
   </body>
 </html>
