--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Welcome to the Blogs app!</h1>
-    <p>An app for collecting your favorite posts.</p>
+    <p>An app for collecting your awsome and favorite posts.</p>
   </body>
 </html>
